syntax = "proto3";

package enrollment;

service EnrollmentService{
    rpc GetUserEnrollments(GetUserEnrollmentsRequest) returns (Enrollments);
    rpc CheckUserEnrollment(CheckUserEnrollmentRequest) returns (CheckUserEnrollmentResponse);
    rpc VerifyChatAccess(VerifyChatAccessRequest) returns (VerifyChatAccessResponse);
}

message EnrollmentQueryParameters {
  int32 page = 1;
  int32 limit = 2;
  map<string,string> filters = 3;
}

message GetUserEnrollmentsRequest {
    string user_id = 1;
    EnrollmentQueryParameters query_parameters = 2;
}

message Enrollments {
    int32 total = 1;
    repeated Enrollment enrollments = 2;
}

message Enrollment {
    string id = 1;
    string user_id = 2;
    string course_id = 3;
    string status = 4;
    string payment_id = 5;
    string created_at = 6;
    string updated_at = 7;
}

message CheckUserEnrollmentRequest {
    string user_id = 1;
    string course_id = 2;
}

message CheckUserEnrollmentResponse {
    bool is_enrolled = 1;
}

message VerifyChatAccessRequest {
    string learner_id = 1;
    string instructor_id = 2;
}

message VerifyChatAccessResponse {
    bool has_access = 1;
}
